//
//  AppAccessibilityId.swift
//  CryptoApp
//
//  Created by Roman Romanov on 09.04.2026.
//

import Foundation

enum AppAccessibilityId {

	enum SearchBar {
		static let searchField = "searchField"
	}

	enum XMarkButton {
		static let id = "closeButton"
	}

	enum CircleButton {
		static let navBarLeft = "navBarLeft"
	}

	enum Settings {
		static let screenTitle = "Settings"
	}

	enum LaunchScreen {
		static let id = "launchScreen"
	}
}
